--- a/rust-to-c/src/meson.build
+++ b/rust-to-c/src/meson.build
@@ -1,4 +1,5 @@
 add_project_arguments(['--vapidir', join_paths(meson.source_root(), 'vapi')], language: 'vala')
+add_project_arguments(['--pkg', 'utils'], language: 'vala')
 
 double_lib = static_library('double', 'double.c')
 
